# ansispire

./: .ansible-lint  .ansible-navigator.yml  .editorconfig  .geminiignore  .gitguardian.yaml  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  .yamllint  ANSISPIRE_STABILITY_REPORT.md  ANSISPIRE_TEST_REPORT.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  Makefile  README.md  SECURITY.md  SUMMARY.md  TODO.md  ansible.cfg  execution-environment.yml  loop_status.tmp  pyproject.toml  refactor_facts.py  requirements.txt  requirements.yml  tox.ini  verify_filters.py
.github/: dependabot.yml
.github/workflows/: ci.yml
callback_plugins/: human_log.py
config/: manifest.yml
controller/: README.md
controller/audit/: Dockerfile.reactor  Dockerfile.sink  README.md  docker-compose.yml  logrotate.conf  loop-smoke.sh  reactor.py  relay.py  sink.py  test_filters.py  test_reactor.py  test_reactor_component.py  test_relay.py  test_rules_contract.py  test_sink.py
controller/rbac/: README.md  role-matrix.md  smoke.sh
controller/semaphore/: .env.example  README.md  bootstrap.yml  bootstrap_preflight.yml  docker-compose.yml
docs/: AI_WORKFLOW.md  CONTRIBUTING.md  GETTING_STARTED.md  README.md  TESTING_GOVERNANCE.md  env-dev.md  env-prod.md  env-stag.md
docs/governance/: ai-workflow.md  contributing.md  iac-vs-ui-boundary.md  loopback-runner.md  operational-truths.md  test-plan.md  testing-governance.md  vendor-patches.md
docs/investigations/: INDEX.md  IVG-TOOLENV-REGISTRY.md  TEMPLATE.md
docs/operations/: eda-core.md  environments.md  hub-deployment.md  vps-manager.md
docs/reference-cn/: README.md
docs/reviews/: claude-rename-to-ansispire-2026-04-16.changelog.md  claude-rename-to-ansispire-2026-04-16.review.md  claude-review-2026-04-09.md  claude-review-round-3-2026-04-09.md  claude-review-round-8-2026-04-14.md  claude-round-3-brief-2026-04-09.md  claude-round-4-brief-2026-04-09.md  claude-round-5-brief-2026-04-09.md  codex-review-round-2-2026-04-09.md  codex-review-round-3-2026-04-09.md  codex-review-round-3-brief-2026-04-09.md  platform-support-addendum-2026-04-09.md  refactor-i18n-a-changelog-2026-04-14.md  refactor-i18n-a-plan-2026-04-14.md  refactor-i18n-b-changelog-2026-04-14.md  refactor-i18n-b-plan-2026-04-14.md  review-iteration-charter.md  review-phase-closeout-2026-04-09.md  round-4-change-log-2026-04-09.md  round-5-change-log-2026-04-14.md  stage-1-closeout-2026-04-15.md
docs/user-guide/: 01-installation.md  02-quickstart-eda.md  03-configuration.md  04-troubleshooting.md  05-glossary.md
examples/: advanced_patterns.yml
extensions/eda/: events.schema.json  rules.json  rules.schema.json
filter_plugins/: custom_filters.py
inventory/: hosts.ini
inventory/dev/: hosts.ini
inventory/dynamic/: aws_ec2.yml  azure_rm.yml  custom_inventory.py  gcp_compute.yml
inventory/local/: vault.yml.example
inventory/prod/: hosts.ini
inventory/production/: hosts.ini
inventory/stag/: hosts.ini
inventory/staging/: hosts.ini
lookup_plugins/: config_value.py
molecule/common/: converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/database/: converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/default/: molecule.yml
molecule/full-stack/: converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/webserver/: converge.yml  molecule.yml  verify.yml
playbooks/: advanced_patterns.yml  deploy_hub.yml  deploy_target.yml  manifest_sync.yml  ping_targets.yml  rolling_update.yml  site.yml  vault_demo.yml
playbooks/remediation/: db_failover.yml  disk_cleanup.yml  fix_nginx.yml
plugins/vps_manager/: README.md  __init__.py  cli.py  (+3 more)
scripts/: bootstrap.sh  detect_secrets_gate.py  loopback_test_runner.sh  verify_report.py
(+226 files in other folders)
