# pyproject.toml — Python project metadata and dependency declaration
#
# This file manages the Python dependencies for the Ansible dev toolchain.
# Recommended install: uv (10-100x faster) or pip:
#
#   uv sync                          # install all dependencies (recommended)
#   uv sync --extra cloud --extra dev  # install all optional dependencies
#   pip install -e ".[dev,cloud]"    # traditional pip install
#
# Note: production dependencies are managed by execution-environment.yml (containerized
# execution). This file is only for local development and the CI toolchain.

[project]
name = "ansispire"
version = "0.1.0"
description = "Ansispire — an Ansible-based reference multi-server management control system"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "ansible-core>=2.16,<2.18",
    "ansible-lint>=25.0",
    "yamllint>=1.35",
    "jmespath>=1.0",
]

[project.optional-dependencies]
# Test tools
test = [
    "molecule>=24.9",
    "molecule-plugins[docker]>=23.5",
    "docker>=7.0",
    "pytest>=8.0",
    "ansible-navigator>=24.0",
]

# Cloud platform support (install on demand)
cloud = [
    "boto3>=1.28",
    "botocore>=1.31",
    "pymysql>=1.1",
    "netaddr>=0.10",
]

# Dev tools (pre-commit, secret detection, etc.)
dev = [
    "pre-commit>=3.7",
    "detect-secrets>=1.5",
]

# Full install (all optional dependencies)
all = [
    "ansispire[test,cloud,dev]",
]

[tool.uv]
# uv-specific configuration
dev-dependencies = [
    "ansispire[all]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"
