# pyproject.toml — Python project metadata and dependency declaration
#
# This file manages the Python dependencies for the Ansible dev toolchain.
# Recommended install: uv (10-100x faster) or pip:
#
#   uv sync                          # install all dependencies (recommended)
#   uv sync --extra cloud --extra dev  # install all optional dependencies
#   pip install -e ".[dev,cloud]"    # traditional pip install
#
# Note: production dependencies are managed by execution-environment.yml (containerized
# execution). This file is only for local development and the CI toolchain.

[project]
name = "ansispire"
version = "0.1.0"
description = "Ansispire — an Ansible-based reference multi-server management control system"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "ansible-core>=2.20.5",
    "ansible-lint>=26.4.0",
    "yamllint>=1.35",
    "PyYAML>=6.0.1",
    "jmespath>=1.0.1",
]

[project.optional-dependencies]
# Test tools
test = [
    "molecule>=24.0.0",
    "molecule-plugins[docker]>=23.5.0",
    "docker>=7.0",
    "pytest>=8.0",
    "coverage>=7.5",
    "ansible-navigator>=24.0",
]

# Cloud platform support (install on demand)
cloud = [
    "boto3>=1.28",
    "botocore>=1.31",
    "pymysql>=1.1",
    "netaddr>=0.10",
]

# Dev tools (pre-commit, secret detection, etc.)
dev = [
    "pre-commit>=3.7",
    "detect-secrets>=1.5",
]

# Full install (all optional dependencies)
all = [
    "ansispire[test,cloud,dev]",
]

[tool.uv]
# uv-specific configuration
dev-dependencies = [
    "ansispire[all]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# This project ships no Python package source (Ansible roles + playbooks live
# elsewhere); pyproject exists solely as a dependency manifest for the local
# dev toolchain. `bypass-selection = true` lets hatchling build an empty
# wheel so `pip install -e .` / `uv sync` succeed without inventing fake
# package files.
[tool.hatch.build.targets.wheel]
bypass-selection = true
